--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -7,11 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- npm install webpack-dev-server 自动监听文件变化并编译打包 -->
+
+
   <div id="box2">
-    测试
+    测试2222  
   </div>
   <div id="box3">
-    测试3
+    测试3333
   </div>
 </body>
 </html>
